@@ -8,16 +8,59 @@ description: "Sample for running executable jar with Azure key vault"
 urlFragment: "azure-spring-boot-sample-run-with-command-line-client-side"
 ---
 
-# Run key-vault-agnostic web client executable jar with Azure key vault via command line 
+# Run Key-vault-agnostic Web Client Executable Jar with Azure Key Vault JCA via Command Line 
 
 ## Key concepts
-This sample illustrates how to use azure-security-keyvault-jca as a web client via command line.
+This sample illustrates how to run a web client with Azure key vault jca via command line.
 
 ## Getting started
 
 
 - This sample contains a simple web client function. 
 
-### Pack the Spring boot web application as an executable jar. 
-1. Run command `mvn package` in the folder where the pom.xml. In the target folder there is a run-with-command-line-client-1.0.0.jar generated.  
-//TODO
+### Run Spring Boot web server with Azure key vault via command line.
+1. Run command `mvn package` in the folder where the pom.xml. In the target folder there is a run-with-command-line-client-1.0.0.jar generated.
+1. Get a copy of the JCA configuration file.
+    - Linux: <java-home>/lib/security/java.security
+    - MacOS Big Sur: <java-home>/conf/security/java.security
+    - Windows: <java-home>\lib\security\java.security
+1. Edit your copy of the JCA configuration file. Replace the provider section with:
+   ```
+   security.provider.1=SUN
+   security.provider.2=SunRsaSign
+   security.provider.3=SunEC
+   security.provider.4=com.azure.security.keyvault.jca.KeyVaultTrustManagerFactoryProvider
+   security.provider.5=SunJSSE
+   security.provider.6=SunJCE
+   security.provider.7=SunJGSS
+   security.provider.8=SunSASL
+   security.provider.9=XMLDSig
+   security.provider.10=SunPCSC
+   security.provider.11=JdkLDAP
+   security.provider.12=JdkSASL
+   security.provider.13=Apple
+   security.provider.14=SunPKCS11
+   security.provider.15=com.azure.security.keyvault.jca.KeyVaultJcaProvider
+   ```
+1. Get the Azure security key vault jca jar. You can build the latest one by yourself then you will get, for example, azure-security-keyvault-jca-2.0.0-beta.1.jar. You can also download the latest published jar from maven repository, then you will get, for example, azure-security-keyvault-jca.1.0.1.jar.
+1. Make a directory, for example, sample_client. Then put the edited copy of java.security file, the run-with-command-line-client-1.0.0.jar, the azure-security-keyvault-jca-2.0.0-beta.1.jar into sample_client
+1. Start the server side. Please refer to server side tutorial: [Run with Command Line Server Side][run_with_command_line_server_side]  
+1. Open terminal and enter the directory sample_client, run the following command:
+   ```
+   java --module-path ./azure-security-keyvault-jca-2.0.0-beta.1.jar --add-modules com.azure.security.keyvault.jca -Dsecurity.overridePropertiesFile=true -Djava.security.properties==./java.security -Dazure.keyvault.uri=https://kv-sp.vault.azure.net/ -Dazure.keyvault.tenant-id=72f988bf-86f1-41af-91ab-2d7cd011db47 -Dazure.keyvault.client-id=1a01b9bc-7b59-4526-9916-bb9433fa8573 -Dazure.keyvault.client-secret=S0Y2_uLSCNT.y.53D4KRR52~~g.Rjv6.F0 -jar run-with-command-line-client-side-1.0.0.jar
+   ```
+   The client will be started and connect to the server side. If you have run the server side with client authentication needed, please use the following command instead of the above to run the client side:
+   ```
+   java --module-path ./azure-security-keyvault-jca-2.0.0-beta.1.jar --add-modules com.azure.security.keyvault.jca -Dsecurity.overridePropertiesFile=true -Djava.security.properties==./java.security -Djavax.net.ssl.keyStoreType=AzureKeyVault -Dazure.keyvault.uri=https://kv-sp.vault.azure.net/ -Dazure.keyvault.tenant-id=72f988bf-86f1-41af-91ab-2d7cd011db47 -Dazure.keyvault.client-id=1a01b9bc-7b59-4526-9916-bb9433fa8573 -Dazure.keyvault.client-secret=S0Y2_uLSCNT.y.53D4KRR52~~g.Rjv6.F0 -jar run-with-command-line-client-side-1.0.0.jar
+   ```
+
+
+## Examples
+## Troubleshooting
+## Next steps
+## Run with Maven
+## Contributing
+
+<!-- LINKS -->
+
+[run_with_command_line_server_side]: https://github.com/Azure-Samples/azure-spring-boot-samples/tree/main/keyvault/azure-security-keyvault-jca/run-with-command-line-server-side/README.md
